Ensure email body shows correct spacing on website

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body {
     width: 50%;
 }
 
+#email-message-body {
+    white-space: pre-wrap;
+}
+
 .footer-links {
     font-size: 14px;
 }
